--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_sign_in: ^4.1.1
   firebase_storage: ^3.1.1
   firebase_auth: ^0.15.3
+  async: ^2.4.2
 
 dev_dependencies:
   flutter_test:
