--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/images/
+    - assets/dobotsu/pieces/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
